   size of the representation. Reported by Calvin Cheng.
 - Fixed bug causing Component to not use the StatusService.getStatus() method. Reported
   by Adam Taft.
 - Fixed bug in ServletConverter causing the caching of the base URI and inability to handle
   request with various base URI style (IP address and domain names for example). Report by Ryan Daum.
 - Fixed bug in DomRepresentation causing the loss of the DocType. Reported by Lee Saferite.

[Enhancements] 
 - Updated Jetty to version 6.1.3.
 - Clarified Representation Javadocs about transient content. Suggested by Philip Johnson.
 - Tutorial part 6 now uses a simpler attach() method requiring no empty attachment path.

1.0.1 (2007-05-04)
[Bugs fixed]
 - Fixed comment error in class ServerServlet.
 - Fixed bug with the ObjectRepresentation class. The constructor with 
   Representation parameter did not get the stream from the serialized parameter.
 - Fixed potential bug when testing equality between media types ignoring the 
   parameters.
 - ServletConverter now also set the request's rootRef property and allows customization
   of the "baseRef" and "rootRef" value via getBaseRef() and getRootRef() methods.
 - Fixed NPE in ApplicationDispatcher when the context from the parent Component isn't
   set. Now a warning message is logged. Reported by Jeff Walter and Chuck Hinson.
 - ApplicationHelper was not properly setting the Application.KEY attribute in
   the incoming requests and responses, causing problem in usage of services such
   as the ConnectorService. Reported by Dig.
 - Clarified the Javadocs on the Context.getParameters() method and on the default
   constructors for Application, Restlet, Router and VirtualHost. Suggested by Alex Milowski
   and Chuck Hinson.
 - Test mediaType inclusion instead of equality when checking metadata 
   consistency in FileClientHelper class.
 - Fixed bug causing HTTP authentication with a long user or password to fail, added JUnit test case. 